--- a/sync/views.view.commerce_user_orders.yml
+++ b/sync/views.view.commerce_user_orders.yml
@@ -367,6 +367,7 @@ display:
         type: full
         options:
           offset: 0
+          pagination_heading_level: h4
           items_per_page: 25
           total_pages: null
           id: 0
@@ -426,7 +427,7 @@ display:
           admin_label: ''
           entity_type: commerce_order
           entity_field: uid
-          plugin_id: numeric
+          plugin_id: entity_target_id
           default_action: 'not found'
           exception:
             value: all
@@ -454,6 +455,7 @@ display:
             admin_permission: 'view commerce_order'
           break_phrase: false
           not: false
+          target_entity_type_id: user
       filters:
         state:
           id: state
