--- a/sync/core.extension.yml
+++ b/sync/core.extension.yml
@@ -1,6 +1,5 @@
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
-langcode: es
 module:
   address: 0
   admin_toolbar: 0
@@ -36,6 +35,7 @@ module:
   field_ui: 0
   file: 0
   filter: 0
+  genpass: 0
   help: 0
   history: 0
   image: 0
