--- a/sync/views.view.commerce_promotion_coupons.yml
+++ b/sync/views.view.commerce_promotion_coupons.yml
@@ -270,6 +270,7 @@ display:
         type: full
         options:
           offset: 0
+          pagination_heading_level: h4
           items_per_page: 50
           total_pages: null
           id: 0
@@ -342,7 +343,7 @@ display:
           admin_label: ''
           entity_type: commerce_promotion_coupon
           entity_field: promotion_id
-          plugin_id: numeric
+          plugin_id: entity_target_id
           default_action: default
           exception:
             value: all
@@ -370,6 +371,7 @@ display:
           validate_options: {  }
           break_phrase: false
           not: false
+          target_entity_type_id: commerce_promotion
       filters:
         code:
           id: code
