agregando modulos para registro, login, username y social_auth, pero sin activar aun

--- a/sync/imparables_bb5.settings.yml
+++ b/sync/imparables_bb5.settings.yml
@@ -128,3 +128,10 @@ bootstrap_barrio_google_fonts: ''
 bootstrap_barrio_bootstrap_icons: 0
 bootstrap_barrio_icons: ''
 langcode: es
+bootstrap_barrio_base_primary_color: ''
+bootstrap_barrio_base_secondary_color: ''
+bootstrap_barrio_body_color: gray-800
+bootstrap_barrio_body_bg_color: white
+bootstrap_barrio_h1_color: base
+bootstrap_barrio_h2_color: base
+bootstrap_barrio_h3_color: base
