--- a/composer.json
+++ b/composer.json
@@ -28,9 +28,14 @@
         "drupal/core-recommended": "^10.2",
         "drupal/genpass": "^2.0",
         "drupal/inline_entity_form": "^3.0@RC",
+        "drupal/multiple_registration": "^3.3",
         "drupal/paragraphs": "^1.17",
         "drupal/remove_username": "^1.5",
         "drupal/search_api": "^1.35",
+        "drupal/social_auth": "^4.1",
+        "drupal/social_auth_apple": "^2.0",
+        "drupal/social_auth_facebook": "^4.0",
+        "drupal/social_auth_google": "^4.0",
         "drupal/user_registrationpassword": "^2.0",
         "drupal/username": "^1.0@alpha",
         "drupal/whatsapp": "^1.0"
