--- a/sync/core.extension.yml
+++ b/sync/core.extension.yml
@@ -45,6 +45,7 @@ module:
   locale: 0
   menu_link_content: 0
   menu_ui: 0
+  multiple_registration: 0
   mysql: 0
   node: 0
   options: 0
@@ -65,6 +66,7 @@ module:
   update: 0
   user: 0
   user_registrationpassword: 0
+  username: 0
   views_ui: 0
   views: 10
   paragraphs: 11
