--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "drupal/genpass": "^2.0",
         "drupal/inline_entity_form": "^3.0@RC",
         "drupal/multiple_registration": "^3.3",
+        "drupal/nice_login": "^2.1",
         "drupal/paragraphs": "^1.17",
         "drupal/remove_username": "^1.5",
         "drupal/search_api": "^1.35",
@@ -36,6 +37,7 @@
         "drupal/social_auth_apple": "^2.0",
         "drupal/social_auth_facebook": "^4.0",
         "drupal/social_auth_google": "^4.0",
+        "drupal/super_login": "^2.1",
         "drupal/user_registrationpassword": "^2.0",
         "drupal/username": "^1.0@alpha",
         "drupal/whatsapp": "^1.0"
