--- a/sync/core.extension.yml
+++ b/sync/core.extension.yml
@@ -47,6 +47,7 @@ module:
   menu_ui: 0
   multiple_registration: 0
   mysql: 0
+  nice_login: 0
   node: 0
   options: 0
   page_cache: 0
@@ -57,6 +58,10 @@ module:
   search_api: 0
   search_api_db: 0
   shortcut: 0
+  social_api: 0
+  social_auth: 0
+  social_auth_facebook: 0
+  social_auth_google: 0
   state_machine: 0
   system: 0
   taxonomy: 0
