--- a/sync/core.extension.yml
+++ b/sync/core.extension.yml
@@ -68,11 +68,14 @@ module:
   text: 0
   token: 0
   toolbar: 0
+  twig_tweak: 0
   update: 0
   user: 0
   user_registrationpassword: 0
   username: 0
   views_ui: 0
+  whatsapp_bubble: 0
+  pathauto: 1
   views: 10
   paragraphs: 11
   standard: 1000
