--- a/sync/core.entity_form_display.commerce_product.online_course.default.yml
+++ b/sync/core.entity_form_display.commerce_product.online_course.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.commerce_product.online_course.field_course_description
     - field.field.commerce_product.online_course.field_course_objectives
     - field.field.commerce_product.online_course.field_course_objetivos
+    - field.field.commerce_product.online_course.field_course_requirements
     - field.field.commerce_product.online_course.field_course_short_description
   module:
     - commerce
@@ -45,6 +46,14 @@ content:
   field_course_objetivos:
     type: text_textarea
     weight: 8
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+  field_course_requirements:
+    type: text_textarea
+    weight: 11
     region: content
     settings:
       rows: 5
