--- a/sync/core.entity_view_display.node.article.default.yml
+++ b/sync/core.entity_view_display.node.article.default.yml
@@ -3,15 +3,14 @@ langcode: es
 status: true
 dependencies:
   config:
-    - core.entity_view_display.comment.comment.default
     - field.field.node.article.body
     - field.field.node.article.comment
+    - field.field.node.article.field_article_short_description
     - field.field.node.article.field_image
     - field.field.node.article.field_tags
     - image.style.wide
     - node.type.article
   module:
-    - comment
     - image
     - text
     - user
@@ -22,21 +21,12 @@ targetEntityType: node
 bundle: article
 mode: default
 content:
-  body:
+  field_article_short_description:
     type: text_default
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 0
-    region: content
-  comment:
-    type: comment_default
-    label: above
-    settings:
-      view_mode: default
-      pager_id: 0
-    third_party_settings: {  }
-    weight: 110
+    weight: 1
     region: content
   field_image:
     type: image
@@ -47,7 +37,7 @@ content:
       image_loading:
         attribute: eager
     third_party_settings: {  }
-    weight: -1
+    weight: 0
     region: content
   field_tags:
     type: entity_reference_label
@@ -55,12 +45,11 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 10
-    region: content
-  links:
-    settings: {  }
-    third_party_settings: {  }
-    weight: 100
+    weight: 2
     region: content
 hidden:
+  body: true
+  comment: true
   langcode: true
+  links: true
+  search_api_excerpt: true
