--- a/sync/core.entity_view_display.node.article.teaser.yml
+++ b/sync/core.entity_view_display.node.article.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.article.body
     - field.field.node.article.comment
+    - field.field.node.article.field_article_short_description
     - field.field.node.article.field_image
     - field.field.node.article.field_tags
     - image.style.medium
@@ -53,6 +54,8 @@ content:
     region: content
 hidden:
   comment: true
+  field_article_short_description: true
   field_image: true
   field_tags: true
   langcode: true
+  search_api_excerpt: true
