--- a/sync/field.field.node.article.comment.yml
+++ b/sync/field.field.node.article.comment.yml
@@ -19,7 +19,7 @@ required: false
 translatable: true
 default_value:
   -
-    status: 2
+    status: 0
     cid: 0
     last_comment_timestamp: 0
     last_comment_name: null
@@ -27,9 +27,9 @@ default_value:
     comment_count: 0
 default_value_callback: ''
 settings:
-  default_mode: 1
+  default_mode: 0
   per_page: 50
   anonymous: 0
-  form_location: true
+  form_location: false
   preview: 1
 field_type: comment
