--- a/sync/core.extension.yml
+++ b/sync/core.extension.yml
@@ -58,6 +58,7 @@ module:
   search_api: 0
   search_api_db: 0
   shortcut: 0
+  smtp: 0
   social_api: 0
   social_auth: 0
   social_auth_facebook: 0
